Made particle endpoint a config optiion

--- a/particleboard.conf
+++ b/particleboard.conf
@@ -1,5 +1,6 @@
 #Defines options relating to Particle
 [Particle]
+ParticleUri=https://api.particle.io/v1/events ; The API endpoint. This default is for all public events.
 ApiKey=c62eeca6fd7cc008b583644960481da260e96de7 ; This is an API key for accessing the Particle API.
 
 #Defines script-related options
